@@ -3,6 +3,7 @@ v3.10 (unreleased)
     * Add a manually extracted list of config options to r2e.1.
     * Add a redirect post-process module.
     * Add new `feed-name` and `feed-url` attributes for the `name-format` setting.
+    * Drop support for Python 3.2 and 3.3
 
 v3.9 (2014-09-01)
     * Catch and error out if a user adds a feed with a duplicate name.
